--- a/src/Detached.Mappers/Detached.Mappers.csproj
+++ b/src/Detached.Mappers/Detached.Mappers.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>5.0.0-rc.2.20475.8</Version>
+    <Version>3.1.12</Version>
     <Authors>Leonardo Porro</Authors>
     <Company />
     <Product>Detached</Product>
